DigicielFull/force-app/main/default/objects/Opportunity/fields/FDT_Section__c.field-meta.xml
<CustomField>
    <fullName>FDT_Section__c</fullName>
    <label>FDT Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>A Leg</fullName>
            </value>
            <value>
                <fullName>B Leg</fullName>
            </value>
            <value>
                <fullName>C Leg</fullName>
            </value>
            <value>
                <fullName>D Leg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>