DigicielFull/force-app/main/default/objects/Opportunity/fields/Fibre__c.field-meta.xml
<CustomField>
    <fullName>Fibre__c</fullName>
    <formula>IF( INCLUDES( Product_Interest__c , &quot;Fibre&quot;) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fibre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>