DigicielFull/force-app/main/default/objects/Opportunity/fields/Fibre_Units__c.field-meta.xml
<CustomField>
    <fullName>Fibre_Units__c</fullName>
    <label>Fibre Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>