DigicielFull/force-app/main/default/objects/Opportunity/fields/Fiscal_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_End__c</fullName>
    <label>Fiscal Year End</label>
    <type>Date</type>
</CustomField>