DigicielFull/force-app/main/default/objects/Opportunity/fields/Fixed_Line__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Line__c</fullName>
    <label>Fixed Line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>