DigicielFull/force-app/main/default/objects/Opportunity/fields/Forecast_by_ICT_for_Installation__c.field-meta.xml
<CustomField>
    <fullName>Forecast_by_ICT_for_Installation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forecast by ICT for Installation</label>
    <type>Checkbox</type>
</CustomField>