DigicielFull/force-app/main/default/objects/Opportunity/fields/Forecast_Implementation_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Implementation_Date__c</fullName>
    <description>This field will be deleted after we finish with what we are trying to achieve in the PNG Market.</description>
    <label>Forecast Implementation Date</label>
    <type>Date</type>
</CustomField>