DigicielFull/force-app/main/default/objects/Opportunity/fields/ForecastedEBITDACFY__c.field-meta.xml
<CustomField>
    <fullName>ForecastedEBITDACFY__c</fullName>
    <inlineHelpText>Reforecast to adjust current Budgeted EBITDA as a result of continually changing business events impacted by revenues (as above ) and expenses;</inlineHelpText>
    <label>Forecasted EBITDA CFY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>