DigicielFull/force-app/main/default/objects/Opportunity/fields/ForecastedRevenueCFY__c.field-meta.xml
<CustomField>
    <fullName>ForecastedRevenueCFY__c</fullName>
    <inlineHelpText>Reforecast to adjust current Budgeted revenues as a result of continually changing business events;</inlineHelpText>
    <label>Forecasted Revenue CFY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>