DigicielFull/force-app/main/default/objects/Opportunity/fields/ForecastRevenue__c.field-meta.xml
<CustomField>
    <fullName>ForecastRevenue__c</fullName>
    <label>Forecast Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>