DigicielFull/force-app/main/default/objects/Opportunity/fields/FORMULA_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_Contact_Fax__c</fullName>
    <formula>Opportunity_Contact__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Fax</label>
    <type>Text</type>
</CustomField>