DigicielFull/force-app/main/default/objects/Opportunity/fields/FORMULA_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_Contact_Phone_Number__c</fullName>
    <formula>Opportunity_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Phone Number</label>
    <type>Text</type>
</CustomField>