DigicielFull/force-app/main/default/objects/Opportunity/fields/Gap_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Gap_Initiative__c</fullName>
    <inlineHelpText>Check if included in Bridge Plan/ Gap Closure Initiatives</inlineHelpText>
    <label>Gap Initiative</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>