DigicielFull/force-app/main/default/objects/Opportunity/fields/Gate_4_Attached__c.field-meta.xml
<CustomField>
    <fullName>Gate_4_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gate 4 Attached</label>
    <type>Checkbox</type>
</CustomField>