DigicielFull/force-app/main/default/objects/Opportunity/fields/Go_Live_Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Date_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Go Live Date Approved</label>
    <type>Checkbox</type>
</CustomField>