DigicielFull/force-app/main/default/objects/Opportunity/fields/Government_Segment__c.field-meta.xml
<CustomField>
    <fullName>Government_Segment__c</fullName>
    <label>Government Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Segment__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Commission</fullName>
            </value>
            <value>
                <fullName>Fully Owned Enterprise</fullName>
            </value>
            <value>
                <fullName>Government Bodies</fullName>
            </value>
            <value>
                <fullName>Majority State Owned</fullName>
            </value>
            <value>
                <fullName>Ministry</fullName>
            </value>
            <value>
                <fullName>Regional Corporation</fullName>
            </value>
            <value>
                <fullName>State Enterprise</fullName>
            </value>
            <value>
                <fullName>Tobago House of Assembly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>