DigicielFull/force-app/main/default/objects/Opportunity/fields/GPRS__c.field-meta.xml
<CustomField>
    <fullName>GPRS__c</fullName>
    <label>GPRS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>