DigicielFull/force-app/main/default/objects/Opportunity/fields/Has_Approved_Budget__c.field-meta.xml
<CustomField>
    <fullName>Has_Approved_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zDeprecated - Has Approved Budget</label>
    <type>Checkbox</type>
</CustomField>