DigicielFull/force-app/main/default/objects/Opportunity/fields/Hosted_PBX__c.field-meta.xml
<CustomField>
    <fullName>Hosted_PBX__c</fullName>
    <formula>IF( INCLUDES( Product_Interest__c , &quot;Hosted PBX&quot;) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hosted PBX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>