DigicielFull/force-app/main/default/objects/Opportunity/fields/Hosted_PBX_Extensions__c.field-meta.xml
<CustomField>
    <fullName>Hosted_PBX_Extensions__c</fullName>
    <label>Hosted PBX Extensions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>