DigicielFull/force-app/main/default/objects/Opportunity/fields/ICT_Mobile__c.field-meta.xml
<CustomField>
    <fullName>ICT_Mobile__c</fullName>
    <label>ICT / Mobile?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ICT</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Both ICT and Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>