DigicielFull/force-app/main/default/objects/Opportunity/fields/ICT_Signed_Docs_Attached__c.field-meta.xml
<CustomField>
    <fullName>ICT_Signed_Docs_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to confirm signed contracts etc have been added to Salesforce for order management</description>
    <inlineHelpText>Attach Signed Orders/Finance Approvals/Company Registration etc</inlineHelpText>
    <label>ICT Signed Docs Attached</label>
    <type>Checkbox</type>
</CustomField>