DigicielFull/force-app/main/default/objects/Opportunity/fields/If_No_List_Current_Providers__c.field-meta.xml
<CustomField>
    <fullName>If_No_List_Current_Providers__c</fullName>
    <inlineHelpText>If No, who is their Current Provider?</inlineHelpText>
    <label>If No, List Current Providers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hitron</fullName>
            </value>
            <value>
                <fullName>Lime</fullName>
            </value>
            <value>
                <fullName>Islandcom</fullName>
            </value>
            <value>
                <fullName>PTV</fullName>
            </value>
            <value>
                <fullName>Direct TV</fullName>
            </value>
            <value>
                <fullName>Dish Network</fullName>
            </value>
            <value>
                <fullName>Digicel 4G</fullName>
            </value>
            <value>
                <fullName>Marpin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>