DigicielFull/force-app/main/default/objects/Opportunity/fields/If_Yes_what_type_of_service__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_what_type_of_service__c</fullName>
    <label>If Yes, what type of service?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Broadband</fullName>
            </value>
            <value>
                <fullName>Cable</fullName>
            </value>
            <value>
                <fullName>Fix-Line</fullName>
            </value>
            <value>
                <fullName>Fibre</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Fibre - TV</fullName>
            </value>
            <value>
                <fullName>Fibre - Broadband</fullName>
            </value>
            <value>
                <fullName>Fibre - Telephone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>