DigicielFull/force-app/main/default/objects/Opportunity/fields/Implementation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Start_Date__c</fullName>
    <description>This field will be deleted after we finish with what we are trying to achieve in the PNG Market.</description>
    <label>Implementation Start Date</label>
    <type>DateTime</type>
</CustomField>