DigicielFull/force-app/main/default/objects/Opportunity/fields/INFOLEGALERating__c.field-meta.xml
<CustomField>
    <fullName>INFOLEGALERating__c</fullName>
    <label>INFOLEGALE Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>