DigicielFull/force-app/main/default/objects/Opportunity/fields/Installation__c.field-meta.xml
<CustomField>
    <fullName>Installation__c</fullName>
    <label>Installation</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Charge_Type__c</field>
        <operation>equals</operation>
        <value>Installation</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>