DigicielFull/force-app/main/default/objects/Opportunity/fields/Installation_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Installation_Contact_Number__c</fullName>
    <label>Installation Contact Number</label>
    <type>Phone</type>
</CustomField>