DigicielFull/force-app/main/default/objects/Opportunity/fields/Installation_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Installation_Contractor__c</fullName>
    <label>Installation Contractor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airtel</fullName>
            </value>
            <value>
                <fullName>Alliance</fullName>
            </value>
            <value>
                <fullName>Aspirona</fullName>
            </value>
            <value>
                <fullName>Saint and Storm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>