DigicielFull/force-app/main/default/objects/Opportunity/fields/Installation_Email__c.field-meta.xml
<CustomField>
    <fullName>Installation_Email__c</fullName>
    <label>Installation Email</label>
    <type>Email</type>
</CustomField>