DigicielFull/force-app/main/default/objects/Opportunity/fields/Installation_Location__c.field-meta.xml
<CustomField>
    <fullName>Installation_Location__c</fullName>
    <label>Installation Location</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>