DigicielFull/force-app/main/default/objects/Opportunity/fields/InternalRateReturn__c.field-meta.xml
<CustomField>
    <fullName>InternalRateReturn__c</fullName>
    <inlineHelpText>Or IRR is a financial metric used in capital budgeting to estimate the profitability /attractiveness of a project or investment. IRR is a discount rate that makes the net present value (NPV) of all cash flows from a particular project equal to zero.</inlineHelpText>
    <label>Internal Rate Return (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>