DigicielFull/force-app/main/default/objects/Opportunity/fields/Is_Cloned__c.field-meta.xml
<CustomField>
    <fullName>Is_Cloned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please don&apos;t erase. This is to identify Cloned Opportunities</description>
    <label>Is Cloned</label>
    <type>Checkbox</type>
</CustomField>