DigicielFull/force-app/main/default/objects/Opportunity/fields/is_won__c.field-meta.xml
<CustomField>
    <fullName>is_won__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Won?</label>
    <type>Checkbox</type>
</CustomField>