DigicielFull/force-app/main/default/objects/Opportunity/fields/LASTMODIFIEDBY_MIGRATION__c.field-meta.xml
<CustomField>
    <fullName>LASTMODIFIEDBY_MIGRATION__c</fullName>
    <businessOwnerGroup>SFDC_Admin_Team</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>zDeprecated - LASTMODIFIEDBY_MIGRATION</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Opportunities (LASTMODIFIEDBY_MIGRATION)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>