DigicielFull/force-app/main/default/objects/Opportunity/fields/LASTMODIFIEDDATE_MIGRATION__c.field-meta.xml
<CustomField>
    <fullName>LASTMODIFIEDDATE_MIGRATION__c</fullName>
    <businessOwnerGroup>SFDC_Admin_Team</businessOwnerGroup>
    <label>zDeprecated - LASTMODIFIEDDATE_MIGRATION</label>
    <type>DateTime</type>
</CustomField>