DigicielFull/force-app/main/default/objects/Opportunity/fields/Legacy_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Opportunity_ID__c</fullName>
    <description>Created to store the record ID from a data migration</description>
    <label>Legacy Opportunity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>