DigicielFull/force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bid Compliance Requirements Not Met</fullName>
            </value>
            <value>
                <fullName>Brand image / lost of trust</fullName>
            </value>
            <value>
                <fullName>Budget withdrawn</fullName>
            </value>
            <value>
                <fullName>Customer Canceled / Request</fullName>
            </value>
            <value>
                <fullName>Customer canceled request</fullName>
            </value>
            <value>
                <fullName>Customer Did Not Progress</fullName>
            </value>
            <value>
                <fullName>Customer Service / Support Issues</fullName>
            </value>
            <value>
                <fullName>Digicel unable to deliver Service</fullName>
            </value>
            <value>
                <fullName>Duplicate Opportunity</fullName>
            </value>
            <value>
                <fullName>Lobbying</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor (not incumbent)</fullName>
            </value>
            <value>
                <fullName>Lost to Incumbent</fullName>
            </value>
            <value>
                <fullName>No Activity</fullName>
            </value>
            <value>
                <fullName>No Bid</fullName>
            </value>
            <value>
                <fullName>No longer required Service</fullName>
            </value>
            <value>
                <fullName>Non compliance with requirements</fullName>
            </value>
            <value>
                <fullName>Poor Relationship</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Solution Design Rejected</fullName>
            </value>
            <value>
                <fullName>Stale Opportunity</fullName>
            </value>
            <value>
                <fullName>Technical Expertise</fullName>
            </value>
            <value>
                <fullName>Unable to deploy</fullName>
            </value>
            <value>
                <fullName>Went to Competition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>