DigicielFull/force-app/main/default/objects/Opportunity/fields/LostFromClosedWon__c.field-meta.xml
<CustomField>
    <fullName>LostFromClosedWon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lost From Closed Won</label>
    <type>Checkbox</type>
</CustomField>