DigicielFull/force-app/main/default/objects/Opportunity/fields/LostfromProspecting__c.field-meta.xml
<CustomField>
    <fullName>LostfromProspecting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lost from Prospecting</label>
    <type>Checkbox</type>
</CustomField>