DigicielFull/force-app/main/default/objects/Opportunity/fields/MACleanCity__c.field-meta.xml
<CustomField>
    <fullName>MACleanCity__c</fullName>
    <label>zDeprecatedClean City (MapAnything)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>