DigicielFull/force-app/main/default/objects/Opportunity/fields/MACleanCounty__c.field-meta.xml
<CustomField>
    <fullName>MACleanCounty__c</fullName>
    <label>zDeprecatedClean County (MapAnything)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>