DigicielFull/force-app/main/default/objects/Opportunity/fields/MACleanDistrict__c.field-meta.xml
<CustomField>
    <fullName>MACleanDistrict__c</fullName>
    <label>zDeprecatedClean District (MapAnything)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>