DigicielFull/force-app/main/default/objects/Opportunity/fields/MACleanState__c.field-meta.xml
<CustomField>
    <fullName>MACleanState__c</fullName>
    <label>zDeprecatedClean State (MapAnything)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>