DigicielFull/force-app/main/default/objects/Opportunity/fields/MACleanStreet__c.field-meta.xml
<CustomField>
    <fullName>MACleanStreet__c</fullName>
    <label>zDeprecatedClean Street (MapAnything)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>