DigicielFull/force-app/main/default/objects/Opportunity/fields/MarketMonthlyBudget__c.field-meta.xml
<CustomField>
    <fullName>MarketMonthlyBudget__c</fullName>
    <businessOwnerGroup>SFDC_Admin_Team</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>zDeprecated - Market Monthly Budget</label>
    <referenceTo>Market_Monthly_Budget__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>