DigicielFull/force-app/main/default/objects/Opportunity/fields/MASimilarity__c.field-meta.xml
<CustomField>
    <fullName>MASimilarity__c</fullName>
    <label>zDEPRECATED Similarity (MapAnything)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>