DigicielFull/force-app/main/default/objects/Opportunity/fields/MASkipGeocoding__c.field-meta.xml
<CustomField>
    <fullName>MASkipGeocoding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zDEPRECATED Skip Geocoding</label>
    <type>Checkbox</type>
</CustomField>