DigicielFull/force-app/main/default/objects/Opportunity/fields/MassUpdateforEBD__c.field-meta.xml
<CustomField>
    <fullName>MassUpdateforEBD__c</fullName>
    <label>Mass Update for EBD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>