DigicielFull/force-app/main/default/objects/Opportunity/fields/MAVerifiedLatitude__c.field-meta.xml
<CustomField>
    <fullName>MAVerifiedLatitude__c</fullName>
    <label>zDEPRECATED Verified Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>