DigicielFull/force-app/main/default/objects/Opportunity/fields/MAVerifiedLongitude__c.field-meta.xml
<CustomField>
    <fullName>MAVerifiedLongitude__c</fullName>
    <label>zDEPRECATED Verified Longi</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>