DigicielFull/force-app/main/default/objects/Opportunity/fields/Mega_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Mega_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mega Opportunity</label>
    <type>Checkbox</type>
</CustomField>