DigicielFull/force-app/main/default/objects/Opportunity/fields/Metro_Fiber__c.field-meta.xml
<CustomField>
    <fullName>Metro_Fiber__c</fullName>
    <formula>IF( INCLUDES( Product_Interest__c , &quot;Fibre – Metro&quot;) , 1,
IF( INCLUDES( Product_Interest__c , &quot;Fibre – E1&quot;) , 1,
IF( INCLUDES( Product_Interest__c , &quot;Fibre – Fixed Line Services&quot;) , 1,
IF( INCLUDES( Product_Interest__c , &quot;Fibre – MetroG&quot;) , 1,
IF( INCLUDES( Product_Interest__c , &quot;Fibre – Broadband&quot;) , 1,
IF( INCLUDES( Product_Interest__c , &quot;Fibre – DIA&quot;) , 1, 0))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Metro Fiber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>