DigicielFull/force-app/main/default/objects/Opportunity/fields/Microsoft_Office_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_Office_Licenses__c</fullName>
    <label>Microsoft Office Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>