DigicielFull/force-app/main/default/objects/Opportunity/fields/MobileROI__c.field-meta.xml
<CustomField>
    <fullName>MobileROI__c</fullName>
    <description>This field is updated by Dealhub to store values regarding the ROI per deal in Salesfiorce for reporting purposes</description>
    <label>Mobile ROI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>