DigicielFull/force-app/main/default/objects/Opportunity/fields/MONTH__c.field-meta.xml
<CustomField>
    <fullName>MONTH__c</fullName>
    <formula>CASE( MONTH( Actual_Billed_Date__c ) , 
1,3, 
2,2, 
3,1, 
16-MONTH( Actual_Billed_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MONTH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>