DigicielFull/force-app/main/default/objects/Opportunity/fields/Monthly_Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Revenue_Target__c</fullName>
    <formula>Owner.GSM_Monthly_Revenue_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Revenue Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>