DigicielFull/force-app/main/default/objects/Opportunity/fields/Months_Until_End_of_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Months_Until_End_of_Fiscal_Year__c</fullName>
    <formula>MONTH(Fiscal_Year_End__c) -  MONTH(CloseDate ) + 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months Until End of Fiscal Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>