DigicielFull/force-app/main/default/objects/Opportunity/fields/MSISDN__c.field-meta.xml
<CustomField>
    <fullName>MSISDN__c</fullName>
    <label>MSISDN</label>
    <length>18</length>
    <type>Text</type>
</CustomField>