DigicielFull/force-app/main/default/objects/Opportunity/fields/Net_AOP_Installation_OTC__c.field-meta.xml
<CustomField>
    <fullName>Net_AOP_Installation_OTC__c</fullName>
    <label>Net AOP Installation OTC</label>
    <summarizedField>OpportunityLineItem.Net_Value_AOP_Installation_OTC_Currency__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>