DigicielFull/force-app/main/default/objects/Opportunity/fields/Net_AOP_Rental_or_Lease__c.field-meta.xml
<CustomField>
    <fullName>Net_AOP_Rental_or_Lease__c</fullName>
    <label>Net AOP Rental or Lease</label>
    <summarizedField>OpportunityLineItem.Net_Value_AOP_Rental_or_Lease_Currency__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>