DigicielFull/force-app/main/default/objects/Opportunity/fields/Net_AOP_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_AOP_Total__c</fullName>
    <label>Net AOP Total</label>
    <summarizedField>OpportunityLineItem.Net_AOP_Total__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>