DigicielFull/force-app/main/default/objects/Opportunity/fields/Net_Contract_Value_Installation_OTC__c.field-meta.xml
<CustomField>
    <fullName>Net_Contract_Value_Installation_OTC__c</fullName>
    <label>Net Contract Value Installation/OTC</label>
    <summarizedField>OpportunityLineItem.Net_Contract_Value_Installation_OTC_Curr__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>